add db script, modify html

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -29,7 +29,7 @@
 	</head>
 	<body style="margin-top: 20px">
 	
-		<div class="row small">
+		<div class="row">
 			<div class="col-md-9 col-md-offset-1" id="schedulerForm">
 				<div class="row">
 					<input type="hidden" name="id" />
@@ -55,7 +55,7 @@
 			  	<button type="button" onclick="submit();return false;" class="btn-xs btn-default">Submit</button>
 			</div>
 		</div>
-		<div class="row small ">
+		<div class="row">
 			<hr/>
 			<div class="col-md-9 col-md-offset-1">
 				<table style="width: 100%"
@@ -71,7 +71,7 @@
 			        <th data-field="state" data-checkbox="true"></th>
 			        <th data-field="id" data-halign="center" data-align="center" data-sortable="false">ID</th>
 			        <th data-field="name" data-halign="center"  data-align="left" data-sortable="false">Name</th>
-			        <th data-field="cronHumanExpression" data-halign="center"  data-align="left" data-sortable="false">Cron</th>
+			        <th data-field="cronHumanExpression" data-halign="center"  data-align="left" data-sortable="false">Cron Expression</th>
 			        <th data-field="jobClass"  data-halign="center" data-align="left" data-sortable="false">Job Class</th>
 			        <th data-field="active" data-halign="center"  data-align="center" data-sortable="false">Active</th>
 			        <th data-field="action" data-halign="center"  data-align="center" data-sortable="false" data-formatter="actionFormatter" >Action</th>
